force-app/main/default/objects/RewardTransaction__c/RewardTransaction__c.object-meta.xml
<CustomObject>
    <label>Reward Transaction</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>