force-app/main/default/objects/RewardTransaction__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Reward Transactions</relationshipLabel>
    <relationshipName>RewardTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>