force-app/main/default/objects/RewardTransaction__c/fields/PointsUsed__c.field-meta.xml
<CustomField>
    <fullName>PointsUsed__c</fullName>
    <label>Points Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>