force-app/main/default/objects/RewardTransaction__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipName>RewardTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>